Kube/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: startreksampleservice-deployment
  labels:
    app: startreksampleservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: startreksampleservice
  template:
    metadata:
      labels:
        app: startreksampleservice
    spec:
      containers:
      - name: startreksampleservice
        image: akhiltest.azurecr.io/starterksampleservice:1.0
        ports:
        - containerPort: 80
