Kube/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: startreksampleapi-service  
spec:
  type: NodePort
  selector:
    app: startreksampleservice  
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
