Kube/TraefikIngressService.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 8080
      name: admin
    - protocol: TCP
      port: 80    
      name: web
  type: LoadBalancer
