Kube/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: startreksampleservice-ingress  
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: 
    http:
      paths:
        - path: /startrekservice
          backend:
            serviceName: startreksampleapi-service
            servicePort: 80
